syntax = "proto3";
option java_multiple_files = true;
package dakkabi.github.proto;

enum Side {
  ASK = 0;
  BID = 1;
}

enum OrderType {
  MARKET = 0;
  LIMIT = 1;
}

message CreateOrderRequest {
  Side side = 1;
  OrderType type = 2;
  double price = 3;
  sint64 quantity = 4; // Java long's are 64bit signed integers.
}

message CreateOrderResponse {
  sint64 id = 1;
}

service OrderBookService {
  rpc createOrder(CreateOrderRequest) returns (CreateOrderResponse);
}